# mkdocs-asf-theme

./: .gitignore  .trufflehog.txt  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: distribute.yml  release.yml  static-analysis.yml  tag-and-distribute.yml
asf_theme/: __init__.py  main.html  mkdocs_theme.yml
asf_theme/assets/stylesheets/: asf.css  extra.css
asf_theme/partials/: copyright.html  footer.html  header.html  logo.html  main.html  social.html
asf_theme/partials/integrations/: analytics.html
src/asf_theme/: main.html  mkdocs_theme.yml
src/asf_theme/assets/stylesheets/: asf.css
src/asf_theme/partials/: header.html  social.html
