[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-asf-theme"
requires-python = ">=3.8"
authors = [
    {name="ASF APD/Tools Team", email="uaf-asf-apd@alaska.edu"},
]
description = "An extension of the MkDocs Material Theme for ASF"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mkdocs",
    "mkdocs-material>=9.4.2,<10",
]
dynamic = ["version"]

[project.entry-points."mkdocs.themes"]
asf-theme = "asf_theme"

[project.urls]
Homepage = "https://github.com/ASFHyP3/mkdocs-asf-theme"
"Bug Tracker" = "https://github.com/ASFHyP3/mkdocs-asf-theme/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
